--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,10 @@
   "javascript.suggest.autoImports": false,
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
+  },
+  "workbench.colorCustomizations": {
+    "activityBar.background": "#05360A",
+    "titleBar.activeBackground": "#074B0E",
+    "titleBar.activeForeground": "#F2FEF4"
   }
 }
